--- a/src/main/templates/home.html
+++ b/src/main/templates/home.html
@@ -2,12 +2,12 @@
 {% block content %}
   <div class="row">
     <div class="col s12 m8">
-      {% with n=n actions='default'%}
-        {% include 'inc/post/post-previews.html' %}
+      {% with posts=posts actions='default'%}
+        {% include 'post/list-public.html' %}
       {% endwith %}
     </div>
     <div class="col m4 hide-on-small-only">
-      {% with n=n %}
+      {% with following=following%}
         {% include 'inc/follow-list.html' %}
       {% endwith %}
     </div>
