--- a/src/main/templates/login.html
+++ b/src/main/templates/login.html
@@ -2,22 +2,10 @@
 {% block content %}
 <div class="sign-in">
   <div class="row">
-    <form class="col s12">
-      <div class="row">
-        <div class="input-field col s12">
-          <i class="material-icons prefix">email</i>
-          <input id="email" type="email" class="validate">
-          <label for="email">Email</label>
-        </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s12">
-        <i class="material-icons prefix">enhanced_encryption</i>
-          <input id="password" type="password" class="validate">
-          <label for="password">Password</label>
-        </div>
-      </div>
-     <a href="#" class="btn waves-effect waves-teal center-align">Sign In</a>
+    <form action="{% url 'login' %}" class="col s12" method="POST">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <button type="submit" class="btn waves-effect waves-teal center-align">Sign In</button>
     </form>
   </div>
 </div>
