--- a/src/main/templates/post/list-private.html
+++ b/src/main/templates/post/list-private.html
@@ -4,7 +4,7 @@
     <div class="post">
 
       <a href="{% url 'post-details' post.id %}" class="black-text"><h3>{{ post.title }}</h3></a>
-      <span>{{ post.created_on }}</span>
+      <span style="padding-left: 20px">Дата: {{ post.created_on }}</span>
       <div class="truncate">{{ post.content }}</div>
       <div class="instruments admin-instruments left">
         <a href="{% url 'post-details' post.id %}" class="material-icon__wrapper">
