--- a/src/main/templates/post/list-public.html
+++ b/src/main/templates/post/list-public.html
@@ -4,18 +4,18 @@
     <div class="post">
 
       <a href="{% url 'post-details' post.id %}" class="black-text"><h3>{{ post.title }}</h3></a>
-      <a href="{% url 'profile' post.author %}">{{ post.author }}</a>
-      <span>{{ post.created_on }}</span>
+      <span>Автор:<a href="{% url 'profile' post.author %}"> {{ post.author }}</a></span>
+      <span style="padding-left: 20px">Дата: {{ post.created_on }}</span>
       <div class="truncate">{{ post.content }}</div>
       <div class="instruments default-instruments">
         <a href="{% url 'post-details' post.id %}">Читать</a>
-        <a href="#" class="right">
+        <div class="blue-text right mark-btn noselect" data-post-id="{{ post.id }}">
           {% if post.is_read %}
             <i class="small material-icons">bookmark</i>
           {% else %}
             <i class="small material-icons">bookmark_border</i>
           {% endif %}
-        </a>
+        </div>
       </div>
     </div>
     <div class="divider"></div>
