Реализация отправки сообщений подписчиками при создании нового поста

--- a/src/main/templates/profile/profile-public.html
+++ b/src/main/templates/profile/profile-public.html
@@ -8,8 +8,8 @@
     {% endif %}
   </div>
   <div class="follow-cnt">
-    <a href="#" class="black-text"><b>{{ following_cnt }}</b> following</a>
-    <a href="#" class="black-text"><b>{{ followers_cnt }}</b> followers</a>
+    <span class="black-text"><b>{{ following_cnt }}</b> following</span>
+    <span class="black-text"><b>{{ followers_cnt }}</b> followers</span>
   </div>
 </div>
 <div class="divider"></div>
