--- a/src/main/templates/profile/profile-private.html
+++ b/src/main/templates/profile/profile-private.html
@@ -15,8 +15,8 @@
 
 
   <div class="follow-cnt">
-    <a href="#" class="black-text"><b>{{ following_cnt }}</b> following</a>
-    <a href="#" class="black-text"><b>{{ followers_cnt }}</b> followers</a>
+    <span class="black-text"><b>{{ following_cnt }}</b> following</span>
+    <span class="black-text"><b>{{ followers_cnt }}</b> followers</span>
   </div>
 </div>
 <div class="divider"></div>
