--- a/src/main/templates/base.html
+++ b/src/main/templates/base.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="{% static 'styles.css' %}" rel="stylesheet">
+  <link href="{% static 'css/styles.css' %}" rel="stylesheet">
   <link href="{% static 'favicon.ico' %}" rel="shortcut icon" type="image/x-icon">
   <title>{% block title %}Блог{% endblock %}</title>
 </head>
@@ -28,6 +28,6 @@
       data: {csrfmiddlewaretoken: '{{ csrf_token }}' },
     });
   </script>
-  <script src="{% static 'script.js' %}"></script>
+  <script src="{% static 'js/script.js' %}"></script>
 </body>
 </html>
