--- a/src/main/templates/base.html
+++ b/src/main/templates/base.html
@@ -20,9 +20,7 @@
     {% endblock %}
   </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script src="{% static 'js/jquery.min.js' %}"></script>
   <script>
     $.ajaxSetup({
       data: {csrfmiddlewaretoken: '{{ csrf_token }}' },
