--- a/src/main/templates/post/update.html
+++ b/src/main/templates/post/update.html
@@ -3,7 +3,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<form method="post">{% csrf_token %}
+<form method="post" enctype='multipart/form-data'>
+    {% csrf_token %}
     {{ form.as_p }}
     <input class="btn" type="submit" value="Update">
 </form>
