--- a/src/main/static_files/css/styles.css
+++ b/src/main/static_files/css/styles.css
@@ -1,6 +1,14 @@
 .container {
   position: relative;
 }
+
+
+.default-flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .follow-list {
   max-width: 250px;
   margin: 35px auto;
@@ -24,8 +32,28 @@
   color: #2196F3;
 }
 
-.post {
-  margin-bottom: 20px;
+.post_wrapper {
+  border: 1px solid rgba(99, 110, 114,.5);
+  border-radius: 2.5px;
+  margin-top: 20px;
+  padding: 10px 0 0px 0;
+  overflow: hidden;
+}
+
+.post__general {
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+}
+
+.post__title {
+  font-size: 24px;
+}
+
+.post__content {
+  color: rgba(45, 52, 54,1.0);
+  font-size: 16px;
+  padding-top: 10px;
 }
 
 .sign-in {
@@ -65,6 +93,10 @@
 }
 .profile__main h1 {
   margin: 20px 30px 20px 0;
+}
+
+.instruments {
+  margin: 15px 0 10px;
 }
 
 .profile__instruments {
