--- a/src/main/templates/post/list-public.html
+++ b/src/main/templates/post/list-public.html
@@ -1,13 +1,14 @@
 {% if posts %}
 
   {% for post in posts %}
-    <div class="post">
-
-      <a href="{% url 'post-details' post.id %}" class="black-text"><h3>{{ post.title }}</h3></a>
-      <span>Автор:<a href="{% url 'profile' post.author %}"> {{ post.author }}</a></span>
-      <span style="padding-left: 20px">Дата: {{ post.created_on }}</span>
-      <div class="truncate">{{ post.content }}</div>
-      <div class="instruments default-instruments">
+    <div class="post_wrapper">
+      <div class="post">
+        {% with post=post %}
+          {% include 'post/post.html' %}
+        {% endwith %}
+      </div>
+        
+      <div class="post__general instruments default-instruments">
         <a href="{% url 'post-details' post.id %}">Читать</a>
         <div class="blue-text right mark-btn noselect" data-post-id="{{ post.id }}">
           {% if post.is_read %}
@@ -18,7 +19,6 @@
         </div>
       </div>
     </div>
-    <div class="divider"></div>
   {% endfor %}
 
 {% else %}
