--- a/src/main/templates/post/list-private.html
+++ b/src/main/templates/post/list-private.html
@@ -1,28 +1,24 @@
-{% if posts %}
+{% for post in posts %}
+  <div class="post_wrapper">
+    {% with post=post %}
+      {% include 'post/post.html' %}
+    {% endwith %}
 
-  {% for post in posts %}
-    <div class="post_wrapper">
-      {% with post=post %}
-        {% include 'post/post.html' %}
-      {% endwith %}
-
-      <div class="post_general instruments admin-instruments left">
-        <a href="{% url 'post-details' post.id %}" class="material-icon__wrapper">
-          <i class="material-icons">remove_red_eye</i>
-          <span>Посмотреть</span>
-        </a>
-        <a href="{% url 'post-update' post.id %}" class="material-icon__wrapper">
-          <i class="material-icons">edit</i>
-          <span>Редактировать</span>
-        </a>
-        <a href="{% url 'post-delete' post.id %}" class="material-icon__wrapper">
-          <i class="material-icons">delete</i>
-          <span>Удалить</span>
-        </a>
-      </div>
+    <div class="post_general instruments admin-instruments left">
+      <a href="{% url 'post-details' post.id %}" class="material-icon__wrapper">
+        <i class="material-icons">remove_red_eye</i>
+        <span>Посмотреть</span>
+      </a>
+      <a href="{% url 'post-update' post.id %}" class="material-icon__wrapper">
+        <i class="material-icons">edit</i>
+        <span>Редактировать</span>
+      </a>
+      <a href="{% url 'post-delete' post.id %}" class="material-icon__wrapper">
+        <i class="material-icons">delete</i>
+        <span>Удалить</span>
+      </a>
     </div>
-  {% endfor %}
-
-{% else %}
+  </div>
+{% empty %}
   <h5>Пока нет постов</h5>
-{% endif %}
+{% endfor %}
