--- a/src/main/templates/post/list-public.html
+++ b/src/main/templates/post/list-public.html
@@ -1,26 +1,22 @@
-{% if posts %}
-
-  {% for post in posts %}
-    <div class="post_wrapper">
-      <div class="post">
-        {% with post=post %}
-          {% include 'post/post.html' %}
-        {% endwith %}
-      </div>
-        
-      <div class="post__general instruments default-instruments">
-        <a href="{% url 'post-details' post.id %}">Читать</a>
-        <div class="blue-text right mark-btn noselect" data-post-id="{{ post.id }}">
-          {% if post.is_read %}
-            <i class="small material-icons">bookmark</i>
-          {% else %}
-            <i class="small material-icons">bookmark_border</i>
-          {% endif %}
-        </div>
+{% for post in posts %}
+  <div class="post_wrapper">
+    <div class="post">
+      {% with post=post %}
+        {% include 'post/post.html' %}
+      {% endwith %}
+    </div>
+      
+    <div class="post__general instruments default-instruments">
+      <a href="{% url 'post-details' post.id %}">Читать</a>
+      <div class="blue-text right mark-btn noselect" data-post-id="{{ post.id }}">
+        {% if post.is_read %}
+          <i class="small material-icons">bookmark</i>
+        {% else %}
+          <i class="small material-icons">bookmark_border</i>
+        {% endif %}
       </div>
     </div>
-  {% endfor %}
-
-{% else %}
+  </div>
+{% empty %}
   <h5>Пока нет постов</h5>
-{% endif %}
+{% endfor %}
