--- a/src/main/static_files/css/styles.css
+++ b/src/main/static_files/css/styles.css
@@ -138,3 +138,10 @@
 .post__image img {
   max-width: 100%;
 }
+
+
+.profile-edit-container {
+  max-width: 350px;
+  margin: 0 auto;
+  width: 100%;
+}
