--- a/src/main/templates/profile/profile-private.html
+++ b/src/main/templates/profile/profile-private.html
@@ -6,6 +6,10 @@
         <i class="material-icons">settings</i>
         <span>Редактировать профиль</span>
       </a>
+      <a href="{% url 'profile-change-password' %}" class="material-icon__wrapper">
+        <i class="material-icons">security</i>
+        <span>Редактировать профиль</span>
+      </a>
       <a href="{% url 'post-create' %}" class="material-icon__wrapper">
         <i class="material-icons">add</i>
         <span>Добавить новый пост</span>
