Password change: label changed

--- a/src/main/templates/profile/profile-private.html
+++ b/src/main/templates/profile/profile-private.html
@@ -8,7 +8,7 @@
       </a>
       <a href="{% url 'profile-change-password' %}" class="material-icon__wrapper">
         <i class="material-icons">security</i>
-        <span>Редактировать профиль</span>
+        <span>Изменить пароль</span>
       </a>
       <a href="{% url 'post-create' %}" class="material-icon__wrapper">
         <i class="material-icons">add</i>
