--- a/src/main/static_files/css/styles.css
+++ b/src/main/static_files/css/styles.css
@@ -86,13 +86,29 @@
   margin-bottom: 20px;
 }
 
-.profile__main {
+.profile__general {
   display: flex;
+  justify-content: start;
   align-items: center;
-
+  margin: 15px 0;
 }
-.profile__main h1 {
-  margin: 20px 30px 20px 0;
+
+.profile__image {
+  border-radius: 50%;
+  border: .5px solid #909090;
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+  background: #fff;
+}
+.profile__image img {
+  width: 100%;
+  height: 100%;
+}
+
+.profile__username {
+  margin-left: 20px;
+  font-size: 24px;
 }
 
 .instruments {
@@ -103,6 +119,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin-bottom: 10px;
 }
 
 .admin-instruments {
