--- a/src/main/templates/inc/header.html
+++ b/src/main/templates/inc/header.html
@@ -4,7 +4,7 @@
     {% if not user.is_anonymous %}
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li>
-          <a href="{% url 'profile' user.username %}" class="material-icon__wrapper">
+          <a href="{% url 'profile-base' %}" class="material-icon__wrapper">
             <i class="material-icons left">person</i>
             <span>{{ user }}</span>
           </a>
