--- a/src/main/templates/post/create_update.html
+++ b/src/main/templates/post/create_update.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<form method="post" enctype='multipart/form-data'>
+<form method='post' enctype='multipart/form-data'>
     {% csrf_token %}
     {{ form.as_p }}
-    <input class="btn" type="submit" value="Save">
+    <input class='btn' type='submit' value='Save'>
 </form>
 {% endblock %}
