--- a/src/main/templates/profile/profile-edit.html
+++ b/src/main/templates/profile/profile-edit.html
@@ -4,10 +4,10 @@
 
 <div class="profile-form-container">
     <h4>Profile Edit</h4>
-    <form method="post">
+    <form method='post' enctype='multipart/form-data'>
         {% csrf_token %}
         {{ form.as_p }}
-        <input class="btn" type="submit" value="Save">
+        <input class='btn' type='submit' value='Save'>
     </form>
 </div>
 
